调整测试库

--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<argLine>-Dfile.encoding=UTF-8</argLine>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.mongodb</groupId>
